# Sparkle

./: .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENCE  LICENCE.txt  MANIFEST.in  Parallel_Portfolio:_CSCCSat,_MiniSAT,_PbO-CCSAT-Generic-001.json  README.md  bitbucket-pipelines.yml  contributing.md  description.txt  dev-env.yml  dev-requirements.txt  environment-dev.yml  environment-mac.yml  environment.yml  global_variables.py  license.txt  mockscenerio.ipynb  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  requirements_first.txt  requirements_second.txt  ruff.toml  setup.py  sparkle_logging.py  test.csv
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  issue-report.md
.github/workflows/: badgegenerator.yml  changelog.yml  codecoverage.yml  documentation.yml  github-pages.yml  linter.yml  main.yml  publish_pypi.yml  pull-request.yml  push-main.yml  setup_slurm.yml  static.yml  unittest.yml
.reports/: coverage
.reports/coverage/: coverage.xml
.reports/junit/: junit.html  junit.xml
CLI/: about.py  about_cli.py  add_feature_extractor.py  add_instances.py  add_solver.py  cleanup_temporary_files.py  compute_features.py  compute_marginal_contribution.py  configure_solver.py  construct_sparkle_parallel_portfolio.py  construct_sparkle_portfolio_selector.py  generate_report.py  initialise.py  load_snapshot.py  remove_feature_extractor.py  remove_instances.py  remove_solver.py  run_ablation.py  run_configured_solver.py  run_parallel_portfolio.py  run_solvers.py  run_sparkle_parallel_portfolio.py  run_sparkle_portfolio_selector.py  run_status.py  save_snapshot.py  sparkle_wait.py  system_status.py  validate_configured_vs_default.py  wait.py
CLI/core/: compute_features.py  run_configured_solver_core.py  (+2 more)
Commands/: __init__.py  about.py  add_configurator.py  add_feature_extractor.py  add_instances.py  add_solver.py  analyse_sparkle_portfolio_selector.py  analyse_sparkle_portfolio_selector_for_test_cases.py  cleanup_current_sparkle_platform.py  cleanup_temporary_files.py  compute_features.py  compute_features_parallel.py  compute_marginal_contribution.py  configure_solver.py  construct_sparkle_parallel_portfolio.py  construct_sparkle_portfolio_selector.py  generate_report.py  generate_report_for_configuration.py  generate_report_for_test.py  generate_report_for_test_cases.py  initialise.py  load_record.py  load_snapshot.py  remove_feature_extractor.py  remove_instances.py  remove_record.py  remove_snapshot.py  remove_solver.py  run_ablation.py  run_configured_solver.py  run_solvers.py  run_solvers_parallel.py  run_sparkle_parallel_portfolio.py  run_sparkle_portfolio_selector.py  run_status.py  save_record.py  save_snapshot.py  sparkle_wait.py  system_status.py  test_configured_solver_and_default_solver.py  (+1 more)
Components/: Sparkle_Report.bib  description_AutoFolio-master.txt  description_runsolver.txt  runsolver-3.3.4.tar.bz2
Documentation/: Makefile  README.md  command_descriptions.py  developer_guide.tex  library_descriptions.py  makefile  md_to_sh.py  mod_descriptions.py  output_paths.txt  requirements.txt  user_guide.tex
Examples/: PaP_solvers_generator.py  compute_features.sh  configuration.md  configuration.sh  configuration_quality.md  configuration_quality.sh  configuration_randomforest.md  configuration_randomforest.sh  configuration_runtime.md  configuration_runtime.sh  configuration_selection.md  configuration_selection.sh  configuration_with_ablation.md  configuration_yahsp.md  configure_solver.sh  configure_solver_pbo-ccsat.sh  configure_solver_quality.sh  configure_solver_two_sets.sh  configure_solver_yahsp.sh  configure_yahsp_two_sets.sh  configured_solver.md  configured_solver.sh  installation.md  parallel_portfolio.md  parallel_portfolio_quality.md  parallel_portfolio_quality.sh  parallel_portfolio_runtime.md  parallel_portfolio_runtime.sh  selection.md  selection.sh  selection_multi-file_instance.md  selection_multi-file_instance.sh  selection_test_set.md
Feature_Data/: sparkle_feature_data.csv
Performance_Data/: sparkle_performance_data.csv  sparkle_performance_data_cutoff_time_information.txt
Reference_Lists/: sparkle_instance_list.txt  sparkle_instance_reference_list.txt  sparkle_solver_list.txt
Settings/: sparkle_ablation_settings.txt  sparkle_default_settings.txt  sparkle_settings.ini  sparkle_slurm_settings.txt  sparkle_smac_settings.txt
TMP/: MetaVC-Generic_frb30-15-1.mis_2020-07-16-08:31:09_60294_3848087827570689468.rawres  MetaVC-Generic_frb30-15-2.mis_2020-07-16-08:33:07_60537_4909353912468341125.rawres  MetaVC-Generic_frb30-15-3.mis_2020-07-16-08:32:54_60537_2167801741276803130.rawres  MetaVC-Generic_frb30-15-3.mis_2020-07-16-08:34:35_60715_8503286458266329225.rawres  MetaVC-Generic_frb30-15-4.mis_2020-07-16-08:31:15_60294_2968276561146150095.rawres  MetaVC-Generic_frb30-15-5.mis_2020-07-16-08:31:28_60294_1880144263671833328.rawres
sparkle/: __init__.py  about.py  cli.py  runners.py  slurm_parsing.py
tests/: __init__.py  conftest.py  sparkle.py  test_abalation.py  test_about.py  test_configuration_scenario.py  test_configurator.py  test_configurator_SMAC2.py  test_configure_solver_help.py  test_construct_parallel_portfolio_help.py  test_extractor.py  test_feature_dataframe.py  test_generate_report_for_configuration.py  test_generate_report_for_configuration_help.py  test_instances.py  test_instances_help.py  test_logging.py  test_marginal_contribution.py  test_marginal_contribution_help.py  test_objective.py  test_performance_data_csv_help.py  test_performance_dataframe.py  test_reporting_scenario.py  test_selector.py  test_solver.py  test_sparkle_configure_solver_help.py  test_sparkle_construct_parallel_portfolio_help.py  test_sparkle_generate_report_for_configuration_help.py  test_sparkle_instances_help.py  test_sparkle_logging.py  test_sparkle_marginal_contribution_help.py  test_sparkle_performance_data_csv_help.py  test_tools.py  test_types.py  test_validator.py
tools/: general.py  runsolver_parsing.py  slurm_parsing.py
(+4067 files in other folders)
