[project]
name = "Sparkle"
version = "0.9.5"
description = """\
    Sparkle is a Programming by Optimisation (PbO)-based problem-solving \
    platform designed to enable the widespread and effective use of PbO \
    techniques for improving the state-of-the-art in solving a broad \
    range of prominent AI problems, including SAT and AI Planning. \
    """
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"

authors = [
    { name = "Koen van der Blom" },
    { name = "Jeremie Gobeil" },
    { name = "Holger H. Hoos" },
    { name = "Chuan Luo" },
    { name = "Jeroen Rook" },
    { name = "Thijs Snelleman" },
]

maintainers = [
    { name = "Thijs Snelleman", email = "snelleman@aim.rwth-aachen.de" },
    { name = "Jeroen Rook", email = "FILL@ME.de" },
    { name = "Hadar Shavit", email = "shavit@aim.rwth-aachen.de" },
]

keywords = [
    "algorithm",
    "configuration",
    "selection",
    "hyperparameter",
    "optimization",
    "empirical",
    "evaluation",
    "solver",
    "sat",
    "ai",
    "planning",
]

classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Natural Language :: English",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development",
]

dependencies = [
    "numpy>=1.26.4",
    "pandas==2.3.2",
    "filelock==3.19.1",
    "smac==2.3.1",
    "RunRunner==0.2.0.3",
    "asf-lib==0.0.1.15",
    "xgboost==2.1.3",
    "scikit-learn==1.3.2",
    "plotly==6.1.2",
    "kaleido==1.0.0",
    "pylatex==1.4.2",
    "tabulate==0.9.0",
    "pytermgui==7.7.2",
    "tqdm==4.66.5",
]

# To ensure package get shipped with data files
[build-system]
requires = [
    "setuptools>=64",
]
build-backend = "setuptools.build_meta"

[project.scripts]
sparkle = "sparkle.CLI._cli_:main"  # Enable 'sparkle [command]' from the command line

[project.urls]
Homepage = "https://github.com/ADA-research/Sparkle"
Documentation = "https://ada-research.github.io/Sparkle/"
Repository = "https://github.com/ADA-research/Sparkle"
Issues = "https://github.com/ADA-research/Sparkle/issues"
Changelog = "https://github.com/ADA-research/Sparkle/blob/main/CHANGELOG.md"
